-- What's new for ?????

New Searches

* que - Interface with Queue (http://www.irondust.com/queue) from Nick Tornow
* wotsit - Programmers File Format Reference

Modified Searches

* gg - /fresh switch disappeared (/since is enough) - /since now allows a number of days in addition to t,y,w,m, and gets independant of goosearch
* hs - added /new from Brent Beardsley
* jdk - added /1.4, /1.3, /tutorial, /all, /j2ee, /jls, /jvm options
* multi - apostrophes (') in the query now don't generate errors

Enhancements

* switches now can contain . and -. This is used here: jdk HashMap /1.3
* changed defer_tools.js for special searches like setiq.xml that need several forms opened in one window

Bug Fixes

* curr - fixed bug with decimal currency conversion (1.23 usd>cad)
* If you have an old localprefs.js that sets defaultsearch to a nonexistent search, gg is used.
* A local alias can now override a search name.  This was causing a script error
  when the menu was invoked.
* Search forms can now have input elements named "target" without causing a script error

-- What's new for 3.0.0.22 (beta)

New Searches

* fm - Freshmeat.net search from Brent Beardsley
* sf - Sourceforget.net search from Brent Beardsley 
* jdk - searches the Sun JDK
* guiasp - Find maps and addresses in Brazil; from Andrew Francis

Modified Searches

* acine - added /video switch and better use of nullargs
* amaz - now tags to dqsd associate account, and added switches for catalog areas and restaurants
* thw - updated the search (the form changed on the site) and added /category switch
* ups - now allows spaces in tracking number(s)
* setiq - new switches : connect and display
* conv - missing "/" in the usage section
* dicfr, gg, googletrans, telfr - better use of nullargs
* gg - added /fresh switch to find pages index over the last day, week, month

Enhancements

* Dutch holidays to 2013 (in both Dutch and English language) from Johan Geertsma 