@@ -1,0 +1,8 @@
+/* localprefs.js
+*
+* Add preferences here to keep them from being overwritten on upgrades.
+* 
+* Use preferences.js as a guide, copying settings from that
+* file to this file, and then modifying them to suit your
+* personal taste.
+*/
