@@ -1,0 +1,9 @@
+/* localsearch.css
+*
+* Add stylesheet preferences here to keep them from being
+* overwritten on upgrades.
+* 
+* Use search.css as a guide, copying settings from that
+* file to this file, and then modifying them to suit your
+* personal taste.
+*/
